@@ -2,16 +2,23 @@
 \version "2.7.13"
 
 \header{
-    texidoc="Beams in unnatural direction, have shortened stems, but do not look too short."
-    }
+  texidoc="Beams in unnatural direction, have shortened stems, but do not look too short."
+}
 \layout{ raggedright = ##t }
 
 
 \relative c'{
-  \override Beam  #'position-callbacks =
-  #`(,Beam::least_squares
-     ,Beam::check_concave
-     ,Beam::slope_damping)
+  \override Beam  #'positions =
+  #(ly:make-simple-closure
+    (ly:make-simple-closure
+     (list chain-grob-member-functions
+      `(,cons 0 0)
+      Beam::calc_least_squares_positions
+      Beam::slope_damping
+      Beam::shift_region_to_valid
+      Beam::set_stem_lengths
+    )))
+  
   \stemUp
   f'4  f8[ f]  f16[ f]  f32[ f]  f64[ f]  f128[ f] 
 }
